--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p>Viel Freude und Erfolg! 🙂</p>
 </main>
  <footer class="container">
-      <small>Konzipiert und erstellt für die <a href="https://edunautika.de">edunautika</a> vom edunautika-Team und Nele •
+      <small>Konzipiert und erstellt für die <a href="<a href="https://www.dguv.de/iag%3B/veranstaltungen/iag-trainertage/2024/index.jsp">IAG Trainer*innentage 2024</a> von <a href="https://ebildungslabor.de">Nele (eBildungslabor)</a> •
         Lizenz: <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de"
           >CC0 1.0</a
         ></small>
